nav-footer-home.css
/* Responsive-beta (um content begrenzung zu testen */

@media screen and (min-width: 1920px) {

.nav-bar {
    padding: 0 max(calc(50% - 720px));
    height: 128px;
    overflow-x: hidden;
}

.footer-main {
    padding: 0 max(calc(50% - 720px));
    height: 128px;
}
}

.logo {
    padding: 0 100px 0 0;
}



@media screen and (min-width: 601px) and (max-width: 768px){

.nav-main{
    display: none;
}

.burger-menu {
    display: block;
    margin-left: auto;
}

.logo{
    padding: 0;
   
}


.logo img {
    padding: 5px 0;
 height: 58px;
    width: 58px;

}

.nav-bar{
    height: 70px;
   width: 100%;
   max-width: 991px;
    left: 0;
    top: 0;
   position: fixed;
    justify-content: center;
    align-items: center;
   
    z-index: 100;
}

.footer-main{
    height: 134px;
    padding: 60px 23px; 
}

.footer-left{
    flex-direction: column-reverse;
    gap: var(--spacing-xs);
    justify-content: center;
    
}

.footer-left a {
    width: 147px;
}

.footer-left div{
   display: flex;
   align-items: center;
}

.footer-right{
padding: 46px 0 0 8px;

}

.footer-right img{

    width: 33px;
    height: 24px;
}

.footer-mobile{
    width: 100%;
    display: flex;
    background-color: var(--color-secondary);
    height: 88px;
    position: sticky;
    align-items: center;
    bottom: 0;
    z-index: 99;
    padding: 48px 0 48px 0;
}

.mobile-content{
    align-items: center;
    justify-content: space-evenly;
    display: flex;
    width: 100%;   

}

}

@media screen and (min-width: 320px) and (max-width: 600px) {
   
   .nav-main{
    display: none;
  }

  .burger-menu {
    display: block;
    margin-left: auto;
}

  .nav-bar{
    height: 70px;
   width: 100%;
position: fixed;
    left: 0;
    top: 0;
    justify-content: center;
    align-items: center;
   
    z-index: 100;
}

  .footer-right img{

    width: 28px;
    height: 22px;
}

.logo{
    padding: 0;
   
}

.logo img {
    padding: 5px 0;
 height: 58px;
    width: 58px;

}

  .footer-left{
    flex-direction: column-reverse;
    gap: var(--spacing-xs);
    justify-content: center; 
}

  .footer-right{
    padding: 52px 0 0 10px;
    display: flex;
   
 }

 .footer-main {
    padding: 40px 24px;
 }

 .footer-mobile{
    width: 100%;
    display: flex;
    background-color: var(--color-secondary);
    height: 88px;
    position: sticky; 
    align-items: center;
    bottom: 0;
    z-index: 99;
    padding: 48px 0 48px 0;
}

.mobile-content{
    align-items: center;
    justify-content: space-evenly;
    display: flex;
    width: 100%;   

}

}


@media screen and (max-width: 768px) {

  .nav-main {
    display: none;
    position: absolute;
    top: 70px;
    left: 0;
    width: 100%;
    background-color: var(--color-primary);
    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
  }

  /* OPEN STATE */
  .menu-toggle:checked ~ .nav-main {
    display: block;
  }

  /* UL jetzt vertikal */
  .nav-main ul {
    flex-direction: column;
    display: flex;
    gap: 0;
    padding: 0;
    margin: 0;
  }

  /* Links schöner machen */
  .nav-main ul li {
    width: 100%;
  }

  .nav-main ul li a {
    display: block;
    width: 100%;
    padding: 16px 24px;
    color: var(--color-nav);
    text-decoration: none;
    border-bottom: 1px solid rgba(255,255,255,0.08);
    transition: 0.2s ease;
  }

  /* Hover / Touch Feedback */
  .nav-main ul li a:hover {
    background-color: rgba(255,255,255,0.08);
    
  }

  /* Burger sichtbar */
  .burger-menu {
    display: block;
    margin-left: auto;
    cursor: pointer;
  }
}

